Micro fix mobile overflow-x

--- a/src/components/Slider/styles.module.scss
+++ b/src/components/Slider/styles.module.scss
@@ -8,7 +8,7 @@ $size: 40vw;
   display: flex;
   margin-left: -50px;
   padding-left: 50px;
-  width: calc(100% + 100px);
+  width: calc(100% + 50px);
   height: calc(#{$size} + 30px);
   overflow: hidden;
   perspective: 5000px;
